04.4 – Istio Gateway (Browser Access)/virtual-service.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: sample-app-vs-gateway
spec:
  hosts:
    - "*"
  gateways:
    - sample-app-gateway
  http:
    - route:
        - destination:
            host: sample-app
            subset: v1
            port:
              number: 80
          weight: 50
        - destination:
            host: sample-app
            subset: v2
            port:
              number: 80
          weight: 50
